--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "index.js",
   "engines": {
     "node": "8.1.1",
-    "npm": "5.0.3" 
+    "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mongoose": "^4.13.7",
+    "nodemon": "^1.14.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "standard": "^10.0.3"
   }
 }
